<resources>
    <string name="app_name">PicLife</string>
    <string name="app_keyboards_path">data/data/com.hyperana.kindleimagekeyboard/Keyboards</string>
    <string name="action_settings">Settings</string>
    <string name="image_input_label">PicLife Keyboard</string>
    <string name="subtype_en_US">English words</string>
    <string name="title_activity_page_from_image">Cut Image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_error">Apologies...</string>
    <string name="read_permission">com.hyperana.kindleimagekeyboard.canRead</string>
    <string name="write_permission">com.hyperana.kindleimagekeyboard.canWrite</string>
    <string name="globe_switch_keyboard_help">While editing, click the globe button to cycle through enabled keyboards easily.</string>
    <string name="nav_switch_keyboard_help">While editing, click keyboard button in bottom nav strip to choose a different keyboard.</string>
    <string name="load_keyboard_help">In Settings, choose the standard keyboard (default), or create your own from nested folders of named images.\nComing soon -- create a keyboard from a single grid image!</string>
    <string name="enable_keyboard_help">Enable "PicLife Keyboard" in <b>device settings</b>: "Settings/Languages and inputs/Virtual keyboards/Manage Keyboards"</string>
    <string name="choose_keyboard_help">While typing, click the globe button on the keyboard or the keyboard button in the bottom navigation strip to choose a different keyboard.</string>
    <string name="create_keyboard_help">The keyboard will be automatically generated from the directory you choose.\nImages in the directory will become icons representing whatever text is in the filename.\nSubdirectories containing images will become separate pages of icons.</string>
    <string name="ok">Ok</string>
    <string name="not_ready">Not ready</string>
    <string name="blank"></string>
    <string name="status_keyboard_enabled">enabled</string>
    <string name="status_keyboard_disabled">Keyboard is disabled</string>
    <string name="status_keyboard_loaded">loaded</string>
    <string name="status_keyboard_loading">loading</string>
    <string name="status_keyboard_not_found">selected keyboard failed to load</string>
    <string name="status_keyboard_chosen">in use</string>
    <string name="status_keyboard_notchosen">Keyboard is not in use</string>
    <string name="default_error_message">An error has occurred.</string>
    <string name="dialog_btn_exit">Exit</string>
    <string name="dialog_btn_report">Exit and Report</string>
    <string name="dialog_keyboard_name_title">Enter a name for your keyboard</string>
    <string name="dialog_keyboard_name_hint">name</string>
    <string name="dialog_keyboard_name_error">Invalid name</string>
    <string name="dialog_keyboard_name_overwrite">Overwrite existing keyboard</string>
    <string name="dialog_reload_title">New setting will be applied when keyboard is reloaded.</string>
    <string name="reload">Reload now</string>
    <string name="later">Apply later</string>
    <string name="dialog_keyboard_path_title">Select your keyboard\'s Home (top-level) Directory</string>
    <string name="dialog_keyboard_path_hint">path</string>
    <string name="dialog_keyboard_path_error">Invalid path</string>
    <string name="choose_load_keyboard">Select your keyboard\'s Home (top-level) Directory</string>
    <string name="dialog_goto_settings">settings</string>
    <string name="button_save">Save</string>
    <string name="button_overwrite">Overwrite</string>
    <string name="button_done">Done</string>
    <string name="enable_dropbox">Enable Dropbox</string>
    <string name="disable_dropbox">Disable Dropbox</string>
    <string name="test_edit_desc">Test Keyboard Here</string>
    <string name="settings_1_desc">show settings access</string>
    <string name="settings_2_desc">go to settings</string>
    <string name="done_desc">text action</string>
    <string name="page_title_desc">page title</string>
    <string name="backspace_desc">backspace</string>
    <string name="forward_delete_desc">forward delete</string>
    <string name="switch_keyboards_desc">switch keyboards</string>
    <string name="home_desc">home</string>
    <string name="error_desc">error</string>
    <string name="icon_default_text">---</string>
    <string name="home_page_title">HOME</string>
    <string name="button_goto_settings">Settings</string>
    <string name="button_goto_help">Embedded Keyboard Help</string>
    <string name="button_goto_device_settings">Device Settings</string>
    <string name="button_manage_keyboards">Manage keyboards</string>
    <string name="title_manage_directories">Custom keyboards:</string>
    <string name="no_homepage_options">No keyboards found</string>
    <string name="add_directory_desc">Add a custom keyboard</string>
    <string name="delete_directory_desc">Delete this keyboard</string>
    <string name="button_create_keyboard">Create New</string>
    <string name="button_add_dropbox">Link to Dropbox</string>
    <string name="add_dropbox_desc">Create keyboards from Dropbox</string>
    <string name="pref_cat_touch">Icon Activation</string>
    <string name="pref_cat_colors">Colors</string>
    <string name="pref_cat_directory">Keyboard Content</string>
    <string name="pref_use_custom_directory">Use custom keyboard</string>
    <string name="pref_add_directory_title">Manage custom keyboards</string>
    <string name="pref_choose_directory">Change Keyboard</string>
    <string name="default_keyboard_name">example</string>
    <string name="pref_default_directory">default</string>
    <string name="pref_create_links_title">Links to subpages are</string>
    <string-array name="pref_create_links_entries">
        <item>icons with matching text</item>
        
        <item>none (navigate by swiping only)</item>
    </string-array>
    <string-array name="pref_create_links_values">
        <item>createLinksMatching</item>
        
        <item>createLinksNever</item>
    </string-array>
    <string name="pref_cat_layout_title">Layout</string>
    <string name="pref_grid_size_title">Grid size</string>
    <string-array name="pref_grid_size_entries">
        <item>3 x 2</item>
        <item>5 x 3</item>
        <item>9 x 5</item>
        <item>12 x 7</item>
    </string-array>
    <string name="pref_grid_columns_title">Columns</string>
    <string-array name="pref_grid_columns_entries">
        <item>1 (single icon)</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="pref_background_color_title">Background Color</string>
    <string-array name="pref_background_color_entries">
        <item>Black</item>
        <item>Grey</item>
        <item>White</item>
        <item>Mocha</item>
        <item>Steel</item>
    </string-array>
    <string-array name="pref_background_color_values">
        <item>#000000</item>
        <item>#50514F</item>
        <item>#EDEEED</item>
        <item>#CFC0BD</item>
        <item>#8499B1</item>
    </string-array>
    <string name="pref_icon_density_title">Icon margins</string>
    <string-array name="pref_icon_density_entries">
        <item>Thin</item>
        <item>Medium</item>
        <item>Wide</item>
    </string-array>
    <string-array name="pref_icon_density_values">
        <item>1</item>
        <item>8</item>
        <item>25</item>
    </string-array>
    <string name="pref_touch_action_title">Activate on</string>
    <string-array name="pref_touch_action_entries">
        <item>click</item>
        <item>touch</item>
        <item>release</item>
    </string-array>
    <string-array name="pref_touch_action_values">
        <item>touchActionClick</item>
        <item>touchActionDown</item>
        <item>touchActionUp</item>
    </string-array>
    <string name="pref_cat_icon_feedback">Icon Feedback</string>
    <string name="pref_cat_speech">Speech</string>
    <string name="pref_speak_title">Enable speech</string>
    <string name="pref_speak_words_title">Speak Words</string>
    <string-array name="pref_speak_words_entries">
        <item>when icon is touched</item>
        <item>when word is entered</item>
        <item>never</item>
    </string-array>
    <string-array name="pref_speak_words_values">
        <item>speakIconTouch</item>
        <item>speakIconEntry</item>
        <item>speakIconNever</item>
    </string-array>
    <string name="pref_speak_text_title">Speak Whole Message</string>
    <string-array name="pref_speak_text_entries">
        <item>when action button is clicked</item>
        <item>after each word is entered</item>
        <item>never</item>
    </string-array>
    <string-array name="pref_speak_text_values">
        <item>speakTextAction</item>
        <item>speakTextEach</item>
        <item>speakTextNever</item>
    </string-array>
    <string name="pref_cat_paging_title">Page Navigation</string>
    <string name="pref_home_button_title">Show Home button</string>
    <string name="pref_speak_links_title">Speak link text</string>
    <string name="pref_type_links_title">Add link text to message</string>
    <string name="pref_swipe_title">Swipe to change page</string>
    <string name="pref_swipe_description">If set, scroll through pages of icons by swiping left or right.</string>
    <string name="pref_swipe_type_title">Swipe Difficulty</string>
    <string-array name="pref_swipe_type_entries">
        <item>Hard</item>
        <item>Medium</item>
        <item>Easy</item>
    </string-array>
    <string-array name="pref_swipe_type_values">
        <item>hard</item>
        <item>medium</item>
        <item>easy</item>
    </string-array>
    <string name="pref_swipe_type_default">swipeLong</string>
    <string name="pref_cat_visual_title">Visual Effects</string>
    <string name="pref_icon_highlight_title">Highlight the selected icon</string>
    <string name="pref_action_highlight_title">Highlight the action button</string>
    <string name="pref_action_highlight_desc">When selected, action button is highlighted when text is not empty.</string>
    <string-array name="pref_icon_highlight_place">
        <item>in place</item>
        <item>in center</item>
        <item>above key</item>
    </string-array>
    <string name="pref_icon_highlight_color_title">Highlight border color</string>
    <string-array name="pref_icon_highlight_color_entries">
        <item>Yellow</item>
        <item>Grey</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Blue</item>
        <item>Cyan</item>
    </string-array>
    <string-array name="pref_icon_highlight_color_values">
        <item>#FFFF00</item>
        <item>#BBBBBB</item>
        <item>#FF2200</item>
        <item>#FF66DD</item>
        <item>#2266FF</item>
        <item>#00FFFF</item>
        
    </string-array>
    <string name="pref_icon_highlight_time">Highlight fade time (seconds)</string>
    <string-array name="pref_icon_highlight_time_entries">
        <item>0.2</item>
        <item>0.5</item>
        <item>1</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_icon_highlight_time_values">
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>3000</item>
    </string-array>
    <string-array name="pref_icon_highlight_zoom">
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
    </string-array>
    <string name="title_activity_create_keyboard">Create Keyboard</string>
    <string name="content_authority">com.hyperana.piclife.ContentProvider</string>
    <string name="title_activity_main">MainActivity</string>
</resources>