<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hyperana.kindleimagekeyboard.CreateKeyboardActivity"
    tools:showIn="@layout/activity_create_keyboard">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAlert"
        android:padding="20dp"
        android:text="@string/create_keyboard_help"/>

    <!-- keyboard name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_keyboard_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_keyboard_name_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/error_keyboard_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_keyboard_name_error"
            android:visibility="invisible"
            android:background="@color/colorAccent" />
        <EditText
            android:id="@+id/edit_keyboard_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/abc_action_button_min_height_material"
            android:hint="@string/dialog_keyboard_name_hint"
            android:inputType="textUri" />
    </LinearLayout>

    <!-- keyboard path: click for dialog input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:id="@+id/title_keyboard_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_keyboard_path_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/error_keyboard_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_keyboard_path_error"
            android:visibility="invisible"
            android:background="@color/colorAccent" />
        <EditText
            android:id="@+id/edit_keyboard_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/abc_action_button_min_height_material"
            android:hint="@string/dialog_keyboard_path_hint"
            android:inputType="none"
            android:focusable="false"/>
    </LinearLayout>

    <!-- Dropbox keyboard path: click for dialog input -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dropbox_container">

    <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <Button
            android:id="@+id/button_disable_dropbox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/checkbox_margin"
            android:text="@string/disable_dropbox"/>
        <TextView
            android:id="@+id/title_dropbox_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:text="@string/dialog_keyboard_path_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/error_dropbox_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:duplicateParentState="true"
            android:text="@string/dialog_keyboard_path_error"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/edit_dropbox_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:focusable="false"
            android:hint="@string/dialog_keyboard_path_hint"
            android:inputType="none"
            android:minHeight="@dimen/abc_action_button_min_height_material" />
    </LinearLayout>
        <Button
            android:id="@+id/button_enable_dropbox"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="@dimen/checkbox_margin"
            android:text="@string/enable_dropbox"/>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:visibility="invisible"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    <!-- save button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:padding="20dp">
        <Button
            android:id="@+id/button_save_keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:background="@color/colorAccent"/>
    </LinearLayout>



</LinearLayout>
