<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_keyboard_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_keyboard_name_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_keyboard_name_hint"
        android:inputType="textUri" />

    <CheckBox
        android:id="@+id/checkbox_keyboard_overwrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_keyboard_name_overwrite"
        android:enabled="false"
        android:checked="false" />
</LinearLayout>